welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: not found: value h
    marquer( T((h + decalage) % T.length))
                ^Array2:19: error: type mismatch;
 found   : Int(1)
 required: String
      marquer( T((h + decalage) % T.length) +1)
                                             ^